updated layout, menu, and strings.xml for registering

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
         <item>Doctor</item>
         <item>Admin</item>
     </string-array>
+    <string name="title_activity_reg_test">RegTest</string>
 </resources>
