--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="descLogo">Application logo</string>
     <string name="hintemail">Email</string>
+    <string name="logout">Logout</string>
     <string name="hintfirst">First Name</string>
     <string name="hintlast">Last Name</string>
     <string name="hintPassword">Password</string>
