commenting, PatientSummaryActivity, PatientListActivity rework
patients can now view all of their past health records along with any
comments left on them by doctors. Doctors can comment on current
patient records and dequeue patients. I had to change how
PatientListActivity and PatientListAdapter work to allow for dequeueing
to work. Loading the list of patients is noticeably slower now… but
it’s the best implementation I could think of. All activities now have
unique names in the ActionsBar

and there’s a temp joke icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="hintPassword">Password</string>
     <string name="btnLogin">Sign In</string>
     <string name="btnForgotPassword">Forgot Password?</string>
-    <string name="title_activity_symptoms">SymptomsActivity</string>
+    <string name="title_activity_symptoms">Menu</string>
 
     <string name="pain_level">Pain Level</string>
     <string name="fatigue_level">Fatigue Level</string>
@@ -43,7 +43,7 @@
         <item>Admin</item>
     </string-array>
     <string name="title_activity_register_patient">Register New User</string>
-    <string name="title_activity_patient_list">PatientListActivity</string>
+    <string name="title_activity_patient_list">Patient List</string>
     <string name="title_activity_symptoms_list">Past Symptom Entries</string>
     <string name="title_activity_symptoms_summary">Placeholder</string>
 </resources>
