duplication error fixed
upon submission of new symptoms, all other ‘queued’ values for other
symptoms submissions from that user will be set to false

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -62,6 +62,6 @@
     <string name="comments_for_patient">Comentarios para Paciente</string>
     <string name="submit">Entregar</string>
 
-    <string name="doctors_comment">Doctor's Comment:</string>
+    <string name="doctors_comment">Doctor\'s Comment:</string>
 
 </resources>
